<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vispa_description</name>
  <version>0.0.1</version>
  <description>URDF Package of VISPA</description>
  <maintainer email="mark.shilton@airbus.com">mark</maintainer>
  <license>See LICENSE file in root of vispa_urdf directory</license>

   <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
</package>